--- a/style/style.css
+++ b/style/style.css
@@ -4,26 +4,25 @@
 }
 
 
+h1, h2{
+    text-align: center;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: red;
+}
+
 #background {
     width: 100%;
     height: 100%;
     position: fixed;
-    opacity: 0.9;
 }
 
 #canvas {
     position: absolute;
-    top: 5%;
+    top: 12%;
     width: 48%;
     left: 32%;
 }
 
-#finish {
-    position: absolute;
-    top: 76%;
-    left: 48%;
-    width: 5%;
-}
 #ferrari{
     position: absolute;
     top: 50%;
